updated some version properties, removed gradle 8 warning